Prevent content overflow, content should be within window in all screen sizes and no scrolling needed

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
   --main-color: #fafafa;
   --input-background: rgba(255, 255, 255, 0.2);
 
+  --max-content-width: 89vw; 
+
   --gap-xsmall: 0.125rem;
   --gap-small: 0.25rem;
   --gap-medium: 0.5rem;
@@ -24,6 +26,7 @@
 html, body {
   background: var(--main-background);
   font-size: 16px;
+  max-width: 100vw;
 }
 
 body {
@@ -52,6 +55,7 @@ header {
   display: flex;
   justify-content: flex-end;
   padding: var(--gap-xlarge);
+  max-width: 100vw;
 }
 
 h1, h2 {
@@ -99,18 +103,12 @@ button {
 .page {
   display: grid;
   padding: var(--outer-padding);
+  justify-content: center;
+  align-items: center;
 }
-
-/*
-grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-*/
 
 /** cards **/
 .card-list {
-    /*
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-  */
   row-gap: var(--gap-xlarge);
   column-gap: var(--gap-large);
   padding: var(--outer-padding) 0;
@@ -183,6 +181,7 @@ grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
   flex-flow: column;
   justify-content: center;
   align-items: center;
+  max-width: var(--max-content-width);
   padding: var(--gap-xlarge) 0;
 }
 
@@ -247,9 +246,8 @@ button.down i {
   display: grid;
   row-gap: var(--gap-xlarge);
   width: 36rem;
-  max-width: 100%;
+  max-width: var(--max-content-width);
   font-size: 1.75rem;
-  margin: 0 auto; 
   padding: var(--outer-padding) 0;
 }
 
